--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
         <img src="img/bob-saw.jpg" alt="Bob Esponja SAW">
         <figcaption>Figura 1: Exemplo de imagem ilustrativa</figcaption>
     </figure>
+    <div>
+        <!-- Details | Summary -->
+        <details>
+            <summary>Mais informações</summary>
+            <p>Aqui estão mais detalhes sobre o HTML semântico.</p>
+        </details>
+    </div>
     <!-- Footer -->
     <footer>
         <p>&copy; 2025 Meu Site</p>
